--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,6 @@
 <resources>
 
     <style name="Theme.GlucoseFit" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.GlucoseFit.Startup" parent="Theme.SplashScreen"/>
 </resources>
